--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <script src="script.js" defer></script>
 </head>
 <body style="margin: 0">
-    <div class="image"></div>
+    <div class="image">
+        <div class="banner">
+            <div class="logo"></div>
+            <div class="tex">ODIN</div>
+        </div>
+    </div>
     <div class="container">
         <div class="top">
             <div class="para">This is not a real online service!  You know you need something like this in your life to realize your deepest dreams. Sign up <em>now</em> to get started</div>
@@ -21,38 +26,41 @@
                 <div class="form-group">
                     <fieldset>
                         <label for="fname">First Name</label><br>
-                        <input type="text" id="fname" name="fname"><br>
+                        <input type="text" id="fname" name="fname" required><br>
                     </fieldset>
                     <fieldset>
                         <label for="lname">Last Name</label><br>
-                        <input type="text" id="lname" name="lname"><br>
+                        <input type="text" id="lname" name="lname" required><br>
                     </fieldset>
                 </div>
 
                 <div class="form-group">
                     <fieldset>
                         <label for="email">Email</label><br>
-                        <input type="text" id="email" name="email"><br>
+                        <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required /><br>
                     </fieldset>
                     <fieldset>
                         <label for="phone">Phone Number</label><br>
-                        <input type="text" id="phone" name="phone"><br>
+                        <input type="tel" id="phone" placeholder="888 888 8888" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" maxlength="12"  title="Ten digits code" required/>  
                     </fieldset>
                 </div>
 
                 <div class="form-group">
                     <fieldset>
                         <label for="lname">Password</label><br>
-                        <input type="text" id="pass" name="pass"><br>
+                        <input type="password" id="pass" name="pass" required><br>
                     </fieldset>
                     <fieldset>
                         <label for="lname">Confirm Password</label><br>
-                        <input type="text" id="confirm" name="confirm"><br>
+                        <input type="password" id="confirm" name="confirm" required><br>
                     </fieldset>
                 </div>
+                <input type="submit" class="submit" value="Create Account"/>
             </form>
         </div>
-        <div class="bottom"></div>
+        <div class="bottom">
+            <div class="underSub">Already have an account? <a href="https://www.google.com">Log in</a></div>
+        </div>
     </div>
 </body>
 </html>
